Fix resource loading from classpath and improve archetype

--- a/org.jrebirth.af/core/.classpath
+++ b/org.jrebirth.af/core/.classpath
@@ -14,7 +14,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry including="**/*.java" kind="src" path="src/test/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_65">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
