--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
@@ -30,7 +30,7 @@ closeRetryDelayFirst=4000
 ## Close Retry Delay in milliseconds, time to wait when application try to close all other time.
 closeRetryDelayOther=1000
 ## Pool size of JRebirth Thread Pool.
-threadPoolRatio=2
+threadPoolSizeRatio=2
 ## This parameter is used to add a prefix to custom wave handler method of JRebirth components. They will be named like this : doMyAction(Wave) after being renamed in camel case.
 waveHandlerPrefix=DO_
 ##
