--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>7.7.3</version>
+		<version>7.7.4-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>7.7.3</version>
+			<version>7.7.4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
