--- a/org.jrebirth.af/distribution/pom.xml
+++ b/org.jrebirth.af/distribution/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>7.7.3</version>
+		<version>7.7.4-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
