--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>af</artifactId>
-	<version>7.7.3</version>
+	<version>8.0.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -42,6 +42,9 @@
 		<module>undoredo</module>
 		<module>showcase</module>
 		<module>preloader</module>
+		<module>processor</module>
+		<module>modular</module>
+		<module>security</module>
 	</modules>
 
 	<issueManagement>
@@ -51,13 +54,13 @@
 
 	<ciManagement>
 		<system>Jenkins</system>
-		<url>http://ci.jrebirth.org/job/JRebirth-7x/</url>
+		<url>http://ci.jrebirth.org/job/JRebirth-8x/</url>
 	</ciManagement>
 
 	<scm>
 		<connection>scm:git:git://github.com/JRebirth/JRebirth.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/JRebirth/JRebirth.git</developerConnection>
-		<url>https://github.com/JRebirth/JRebirth/tree/7.x</url>
+		<url>https://github.com/JRebirth/JRebirth/tree/8.x</url>
 	</scm>
 
 	<licenses>
@@ -124,6 +127,16 @@
 		
 		<plugins>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
@@ -247,7 +260,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 			</extension>
 		</extensions>
 
@@ -287,7 +300,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.8.2</version>
+				<version>4.11</version>
 			</dependency>
 			<dependency>
 				<groupId>org.easytesting</groupId>
