--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -41,6 +41,13 @@
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
+			<artifactId>modular</artifactId>
+			<version>8.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>8.0.0-SNAPSHOT</version>
 			<optional>true</optional>
