Improve module, InnerComponent, Behavior features + clean up

--- a/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
@@ -24,7 +24,10 @@ logResolution=true
 ## The handler used while running in developer mode to manage unprocessed wave.
 unprocessedWaveHandler=org.jrebirth.af.core.link.DefaultUnprocessedWaveHandler
 ## The factory used to create components.
-componentFactory=org.jrebirth.af.core.facade.factory.DefaultComponentFactory
+componentFactory=org.jrebirth.af.core.facade.factory.AnnotatedComponentFactory
+# Flag that activates the module.xml file parsing to register components using annotations.
+parseModuleConfigFile=true
+
 ## First Close Retry Delay in milliseconds, time to wait when application try to close the first time.
 closeRetryDelayFirst=4000
 ## Close Retry Delay in milliseconds, time to wait when application try to close all other time.
