--- a/org.jrebirth.af/preloader/pom.xml
+++ b/org.jrebirth.af/preloader/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>7.7.4</version>
+		<version>7.7.5-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth.af</groupId>
