--- a/org.jrebirth.af/core/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth.af/core/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,10 +1,10 @@
 analyseLocally=false
 eclipse.preferences.version=1
 extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
-lastAnalysisDate=1413973818000
+lastAnalysisDate=1415212808000
 projectArtifactId=core
 projectBranch=
 projectGroupId=org.jrebirth
-projectKey=org.jrebirth.af\:core
+projectKey=org.jrebirth.af\:core\:8.x
 serverUrl=http\://quality.jrebirth.org
 version=2
