--- a/org.jrebirth.af/component/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth.af/component/src/test/resources/config/test-jrebirth.properties
@@ -21,7 +21,7 @@ notAvailableImage=image/||NotAvailable||png
 applicationName={} powered by JRebirth
 
 ## The factory used to create components.
-componentFactory=org.jrebirth.af.core.facade.factory.AnnotatedComponentFactory
+componentFactory=org.jrebirth.af.core.component.factory.AnnotatedComponentFactory
 
 ###################################################################################################
 ###										Main Stage Management									###
