--- a/org.jrebirth.af/api/pom.xml
+++ b/org.jrebirth.af/api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.0.0-SNAPSHOT</version>
+		<version>8.0.0</version>
 	</parent>
 	
 	<groupId>org.jrebirth.af</groupId>
