--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>af</artifactId>
-	<version>8.0.0-SNAPSHOT</version>
+	<version>8.0.0</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
