--- a/org.jrebirth.af/modular/pom.xml
+++ b/org.jrebirth.af/modular/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jrebirth</groupId>
     <artifactId>af</artifactId>
-    <version>8.0.0</version>
+    <version>8.0.1-SNAPSHOT</version>
   </parent>
   <groupId>org.jrebirth.af</groupId>
   <artifactId>modular</artifactId>
