--- a/org.jrebirth.af/modular/pom.xml
+++ b/org.jrebirth.af/modular/pom.xml
@@ -1,16 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jrebirth</groupId>
-    <artifactId>af</artifactId>
-    <version>8.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>org.jrebirth.af</groupId>
-  <artifactId>modular</artifactId>
-  <name>Modular</name>
-  
-  
-  <build>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jrebirth</groupId>
+		<artifactId>af</artifactId>
+		<version>8.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>org.jrebirth.af</groupId>
+	<artifactId>modular</artifactId>
+
+	<name>Modular</name>
+	<description>Provides classes used to manage JRebirth Modules</description>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -39,6 +40,5 @@
 	<dependencies>
 
 	</dependencies>
-	
-	<description>The Model of the JRAF's Modular engine</description>
+
 </project>
