--- a/org.jrebirth.af/security/pom.xml
+++ b/org.jrebirth.af/security/pom.xml
@@ -1,23 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jrebirth</groupId>
-    <artifactId>af</artifactId>
-    <version>8.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>org.jrebirth.af</groupId>
-  <artifactId>security</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.jrebirth.af</groupId>
-  		<artifactId>core</artifactId>
-  		<version>8.0.1-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jrebirth.af</groupId>
-  		<artifactId>processor</artifactId>
-  		<version>8.0.1-SNAPSHOT</version>
-  		<optional>true</optional>
-  	</dependency>
-  </dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jrebirth</groupId>
+		<artifactId>af</artifactId>
+		<version>8.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>org.jrebirth.af</groupId>
+	<artifactId>security</artifactId>
+
+	<name>Security</name>
+	<description>Provides classes used to manage Security concerns.</description>
+
+	<dependencies>
+	
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>core</artifactId>
+			<version>8.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>processor</artifactId>
+			<version>8.0.1-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		
+	</dependencies>
+	
 </project>
