--- a/org.jrebirth.af/api/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth.af/api/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,6 +1,6 @@
 eclipse.preferences.version=1
-extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
-lastAnalysisDate=1415301939000
-projectKey=org.jrebirth.af\:api
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\r\nsonar.language\=java
+lastAnalysisDate=1424887915000
+projectKey=org.jrebirth.af\:api\:8.x
 serverUrl=http\://quality.jrebirth.org
 version=2
