--- a/org.jrebirth.af/presentation/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth.af/presentation/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,10 +1,10 @@
 analyseLocally=false
 eclipse.preferences.version=1
-extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
-lastAnalysisDate=1373275994000
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\r\nsonar.language\=java
+lastAnalysisDate=1424887915000
 projectArtifactId=presentation
 projectBranch=
 projectGroupId=org.jrebirth
-projectKey=org.jrebirth.af\:presentation
+projectKey=org.jrebirth.af\:presentation\:8.x
 serverUrl=http\://quality.jrebirth.org
 version=2
