--- a/org.jrebirth.af/undoredo/pom.xml
+++ b/org.jrebirth.af/undoredo/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jrebirth</groupId>
-		<version>8.0.1-SNAPSHOT</version>
+		<version>8.0.1</version>
 		<relativePath>..</relativePath>
 		<artifactId>af</artifactId>
 	</parent>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.0.1-SNAPSHOT</version>
+			<version>8.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
