--- a/org.jrebirth.af/showcase/analyzer/pom.xml
+++ b/org.jrebirth.af/showcase/analyzer/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.0.2-SNAPSHOT</version>
+		<version>8.0.2</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.0.2-SNAPSHOT</version>
+			<version>8.0.2</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
