--- a/org.jrebirth.af/archetype/pom.xml
+++ b/org.jrebirth.af/archetype/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.0.3-SNAPSHOT</version>
+		<version>8.0.3</version>
 		<relativePath>..</relativePath>
 	</parent>
 
