--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>af</artifactId>
-	<version>8.0.5-SNAPSHOT</version>
+	<version>8.0.5</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -64,7 +64,7 @@
 		<connection>scm:git:git://github.com/JRebirth/JRebirth.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/JRebirth/JRebirth.git</developerConnection>
 		<url>https://github.com/JRebirth/JRebirth/tree/8.x</url>
-	  <tag>jrebirth-8.0.5-SNAPSHOT-SNAPSHOT</tag>
+	  <tag>jrebirth-8.0.5-SNAPSHOT</tag>
   </scm>
 
 	<licenses>
