--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>af</artifactId>
 		<groupId>org.jrebirth</groupId>
-		<version>8.0.5-SNAPSHOT</version>
+		<version>8.0.5</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -240,13 +240,13 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>8.0.5-SNAPSHOT</version>
+			<version>8.0.5</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.0.5-SNAPSHOT</version>
+			<version>8.0.5</version>
 		</dependency>
 
 	</dependencies>
