--- a/org.jrebirth.af/preloader/pom.xml
+++ b/org.jrebirth.af/preloader/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.0.5</version>
+		<version>8.1.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
