--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -1,25 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
 		<version>8.1.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-
+	
 	<groupId>org.jrebirth.af.showcase</groupId>
-	<artifactId>undoredo</artifactId>
+	<artifactId>demo</artifactId>
 	<packaging>jar</packaging>
 
-	<name>SC Undo Redo</name>
-	<description>Showcase application used to describe Undo Redo features</description>
-
+	<name>JRebirth Demo</name>
+	<description>All Showcases applications bundled into one</description>
+	<url>http://www.jrebirth.org/apps/Demo.html</url>
 
 	<properties>
 
-		<jnlpFilename>UndoRedo-Showcase.jnlp</jnlpFilename>
-		<appClass>org.jrebirth.af.showcase.undoredo.UndoRedoApplication</appClass>
+		<deployUrl>http://apps.jrebirth.org</deployUrl>
+		<deployPath>${project.artifactId}/${project.version}</deployPath>
+
+		<jnlpFilename>JRebirthAnalyzer.jnlp</jnlpFilename>
+		<appClass>org.jrebirth.af.showcase.demo.JRebirthDemo</appClass>
+
+		<appletWidth>1024</appletWidth>
+		<appletHeight>768</appletHeight>
 
 	</properties>
 
@@ -31,21 +36,27 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<dependencies>
-
-		<dependency>
-			<groupId>org.jrebirth.af</groupId>
-			<artifactId>undoredo</artifactId>
-			<version>8.1.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>8.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Modules -->
+		<dependency>
+			<groupId>org.jrebirth.af.showcase</groupId>
+			<artifactId>fxml</artifactId>
+			<version>8.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jrebirth.af.showcase</groupId>
+			<artifactId>undoredo</artifactId>
+			<version>8.1.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
-	<url>http://www.jrebirth.org/apps/UndoRedo.html</url>
 </project>
