Manage tabModel within sample code

--- a/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
@@ -16,7 +16,7 @@ developerMode=false
 closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSizeRatio=2
-waveHandlerPrefix=
+waveHandlerPrefix=DO_
 notAvailableImage=image/||NotAvailable||png
 applicationName={} powered by JRebirth
 
